--- a/doordash_delivery_est/doordash_est.ipynb
+++ b/doordash_delivery_est/doordash_est.ipynb
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +434,7 @@
     "                auto_ml.fit(X_train=cv_xtrain,y_train=cv_ytrain,time_budget=time_budget,metric=metric,estimator_list=estimator_list,task=task,seed=42,verbose=0)\n",
     "                ## store the model\n",
     "                model_pickle = open(f'{file_path}/cv_{cv_subset}_automl_{model_name}.pkl','wb')\n",
-    "                pickle.dump(auto_ml.model,model_pickle,pickle.HIGHEST_PROTOCOL)\n",
+    "                pickle.dump(auto_ml,model_pickle,pickle.HIGHEST_PROTOCOL)\n",
     "                model_pickle.close()\n",
     "                cv_subset += 1\n",
     "                ## predict, validate\n",
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +473,7 @@
     "        trained_model = auto_ml\n",
     "        ## store the model\n",
     "        model_pickle = open(f'{file_path}/automl_{model_name}.pkl','wb')\n",
-    "        pickle.dump(auto_ml.model,model_pickle,pickle.HIGHEST_PROTOCOL)\n",
+    "        pickle.dump(auto_ml,model_pickle,pickle.HIGHEST_PROTOCOL)\n",
     "        model_pickle.close()\n",
     "        feature_importances_df = pd.DataFrame({'features':auto_ml.feature_names_in_,'importance':auto_ml.feature_importances_})\n",
     "        ## cross-validation\n",
@@ -820,20 +820,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "Can't pickle local object 'ApplyMethod_autoML_cv_ensemble.<locals>.xgbGamma'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [64], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m auto_xgb_cv \u001b[39m=\u001b[39m ApplyMethod_autoML_cv_ensemble(\n\u001b[0;32m      2\u001b[0m     x_train\u001b[39m=\u001b[39;49mx_train,\n\u001b[0;32m      3\u001b[0m     x_test\u001b[39m=\u001b[39;49mx_holdout,\n\u001b[0;32m      4\u001b[0m     y_train\u001b[39m=\u001b[39;49my_train,\n\u001b[0;32m      5\u001b[0m     y_test\u001b[39m=\u001b[39;49my_holdout,\n\u001b[0;32m      6\u001b[0m     time_budget\u001b[39m=\u001b[39;49m\u001b[39m400\u001b[39;49m,\n\u001b[0;32m      7\u001b[0m     metric\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mmse\u001b[39;49m\u001b[39m'\u001b[39;49m,\n\u001b[0;32m      8\u001b[0m     estimator_list\u001b[39m=\u001b[39;49m[\u001b[39m'\u001b[39;49m\u001b[39mxgb_gamma\u001b[39;49m\u001b[39m'\u001b[39;49m,\u001b[39m'\u001b[39;49m\u001b[39mxgboost\u001b[39;49m\u001b[39m'\u001b[39;49m,\u001b[39m'\u001b[39;49m\u001b[39mxgb_limitdepth\u001b[39;49m\u001b[39m'\u001b[39;49m],\n\u001b[0;32m      9\u001b[0m     task\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mregression\u001b[39;49m\u001b[39m'\u001b[39;49m,\n\u001b[0;32m     10\u001b[0m     cv_folds\u001b[39m=\u001b[39;49m\u001b[39m5\u001b[39;49m,\n\u001b[0;32m     11\u001b[0m     file_path\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39msingleModel_model_pickles\u001b[39;49m\u001b[39m'\u001b[39;49m,\n\u001b[0;32m     12\u001b[0m     model_name\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39msingleStepModel_predPrep.pkl\u001b[39;49m\u001b[39m'\u001b[39;49m\n\u001b[0;32m     13\u001b[0m )\n",
+      "Cell \u001b[1;32mIn [63], line 35\u001b[0m, in \u001b[0;36mApplyMethod_autoML_cv_ensemble\u001b[1;34m(x_train, x_test, y_train, y_test, time_budget, metric, estimator_list, task, cv_folds, file_path, model_name)\u001b[0m\n\u001b[0;32m     33\u001b[0m                 cv_holdout_scores\u001b[39m.\u001b[39mappend(accuracy_score(y_true\u001b[39m=\u001b[39my_test,y_pred\u001b[39m=\u001b[39mcv_yhat))\n\u001b[0;32m     34\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m \u001b[39mas\u001b[39;00m ex:\n\u001b[1;32m---> 35\u001b[0m     \u001b[39mraise\u001b[39;00m ex\n\u001b[0;32m     36\u001b[0m \u001b[39mreturn\u001b[39;00m cv_scores,cv_holdout_scores\n",
+      "Cell \u001b[1;32mIn [63], line 20\u001b[0m, in \u001b[0;36mApplyMethod_autoML_cv_ensemble\u001b[1;34m(x_train, x_test, y_train, y_test, time_budget, metric, estimator_list, task, cv_folds, file_path, model_name)\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[39m## store the model\u001b[39;00m\n\u001b[0;32m     19\u001b[0m model_pickle \u001b[39m=\u001b[39m \u001b[39mopen\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mfile_path\u001b[39m}\u001b[39;00m\u001b[39m/cv_\u001b[39m\u001b[39m{\u001b[39;00mcv_subset\u001b[39m}\u001b[39;00m\u001b[39m_automl_\u001b[39m\u001b[39m{\u001b[39;00mmodel_name\u001b[39m}\u001b[39;00m\u001b[39m.pkl\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mwb\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m---> 20\u001b[0m pickle\u001b[39m.\u001b[39;49mdump(auto_ml,model_pickle,pickle\u001b[39m.\u001b[39;49mHIGHEST_PROTOCOL)\n\u001b[0;32m     21\u001b[0m model_pickle\u001b[39m.\u001b[39mclose()\n\u001b[0;32m     22\u001b[0m cv_subset \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: Can't pickle local object 'ApplyMethod_autoML_cv_ensemble.<locals>.xgbGamma'"
+     ]
+    }
+   ],
    "source": [
     "auto_xgb_cv = ApplyMethod_autoML_cv_ensemble(\n",
     "    x_train=x_train,\n",
     "    x_test=x_holdout,\n",
     "    y_train=y_train,\n",
     "    y_test=y_holdout,\n",
-    "    time_budget=360,\n",
+    "    time_budget=400,\n",
     "    metric='mse',\n",
     "    estimator_list=['xgb_gamma','xgboost','xgb_limitdepth'],\n",
     "    task='regression',\n",
-    "    cv_folds=3,\n",
+    "    cv_folds=5,\n",
     "    file_path='singleModel_model_pickles',\n",
     "    model_name='singleStepModel_predPrep.pkl'\n",
     ")"
@@ -841,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -849,13 +863,13 @@
      "output_type": "stream",
      "text": [
       "Cross-validation results (RMSE): \n",
-      "[764.5794060032332, 766.2712795989736, 757.600724721148, 792.9816669928537, 844.7342577630092]\n",
+      "[908.5741668295789, 882.8315315339398, 912.3661103725913]\n",
       "Mean of cross-validation results (RMSE): \n",
-      "785.2334670158436\n",
+      "901.2572695787034\n",
       "RMSE scores of cv models against holdout: \n",
-      "[842.1314633393378, 840.0196979261668, 840.8673760719671, 839.4876240369017, 840.9323899450047]\n",
+      "[835.2231417973555, 870.0089025242829, 842.1258958922277]\n",
       "Average RMSE score (ensemble score): \n",
-      "840.6877102638757\n"
+      "849.1193134046221\n"
      ]
     }
    ],
@@ -869,6 +883,39 @@
     "print(auto_xgb_cv[1])\n",
     "print('Average RMSE score (ensemble score): ')\n",
     "print(np.mean(auto_xgb_cv[1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "modelx = pickle.load(open('singleModel_model_pickles\\cv_0_automl_singleStepModel_predPrep.pkl.pkl','rb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Feature shape mismatch, expected: 163, got 166",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [61], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m modelx\u001b[39m.\u001b[39;49mpredict(x_holdout)\n",
+      "File \u001b[1;32mc:\\Users\\lukew\\anaconda3\\lib\\site-packages\\flaml\\automl\\model.py:258\u001b[0m, in \u001b[0;36mBaseEstimator.predict\u001b[1;34m(self, X, **kwargs)\u001b[0m\n\u001b[0;32m    256\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_model \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m    257\u001b[0m     X \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_preprocess(X)\n\u001b[1;32m--> 258\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_model\u001b[39m.\u001b[39mpredict(X, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m    259\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    260\u001b[0m     logger\u001b[39m.\u001b[39mwarning(\n\u001b[0;32m    261\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mEstimator is not fit yet. Please run fit() before predict().\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    262\u001b[0m     )\n",
+      "File \u001b[1;32mc:\\Users\\lukew\\anaconda3\\lib\\site-packages\\xgboost\\sklearn.py:881\u001b[0m, in \u001b[0;36mXGBModel.predict\u001b[1;34m(self, X, output_margin, ntree_limit, validate_features, base_margin, iteration_range)\u001b[0m\n\u001b[0;32m    879\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_can_use_inplace_predict():\n\u001b[0;32m    880\u001b[0m     \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m--> 881\u001b[0m         predts \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mget_booster()\u001b[39m.\u001b[39;49minplace_predict(\n\u001b[0;32m    882\u001b[0m             data\u001b[39m=\u001b[39;49mX,\n\u001b[0;32m    883\u001b[0m             iteration_range\u001b[39m=\u001b[39;49miteration_range,\n\u001b[0;32m    884\u001b[0m             predict_type\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mmargin\u001b[39;49m\u001b[39m\"\u001b[39;49m \u001b[39mif\u001b[39;49;00m output_margin \u001b[39melse\u001b[39;49;00m \u001b[39m\"\u001b[39;49m\u001b[39mvalue\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[0;32m    885\u001b[0m             missing\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mmissing,\n\u001b[0;32m    886\u001b[0m             base_margin\u001b[39m=\u001b[39;49mbase_margin,\n\u001b[0;32m    887\u001b[0m             validate_features\u001b[39m=\u001b[39;49mvalidate_features,\n\u001b[0;32m    888\u001b[0m         )\n\u001b[0;32m    889\u001b[0m         \u001b[39mif\u001b[39;00m _is_cupy_array(predts):\n\u001b[0;32m    890\u001b[0m             \u001b[39mimport\u001b[39;00m \u001b[39mcupy\u001b[39;00m     \u001b[39m# pylint: disable=import-error\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\lukew\\anaconda3\\lib\\site-packages\\xgboost\\core.py:2025\u001b[0m, in \u001b[0;36mBooster.inplace_predict\u001b[1;34m(self, data, iteration_range, predict_type, missing, validate_features, base_margin, strict_shape)\u001b[0m\n\u001b[0;32m   2021\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mTypeError\u001b[39;00m(\n\u001b[0;32m   2022\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39m`shape` attribute is required when `validate_features` is True.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   2023\u001b[0m         )\n\u001b[0;32m   2024\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(data\u001b[39m.\u001b[39mshape) \u001b[39m!=\u001b[39m \u001b[39m1\u001b[39m \u001b[39mand\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mnum_features() \u001b[39m!=\u001b[39m data\u001b[39m.\u001b[39mshape[\u001b[39m1\u001b[39m]:\n\u001b[1;32m-> 2025\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m   2026\u001b[0m             \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mFeature shape mismatch, expected: \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mnum_features()\u001b[39m}\u001b[39;00m\u001b[39m, \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   2027\u001b[0m             \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mgot \u001b[39m\u001b[39m{\u001b[39;00mdata\u001b[39m.\u001b[39mshape[\u001b[39m1\u001b[39m]\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[0;32m   2028\u001b[0m         )\n\u001b[0;32m   2030\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mdata\u001b[39;00m \u001b[39mimport\u001b[39;00m _array_interface\n\u001b[0;32m   2031\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(data, np\u001b[39m.\u001b[39mndarray):\n",
+      "\u001b[1;31mValueError\u001b[0m: Feature shape mismatch, expected: 163, got 166"
+     ]
+    }
+   ],
+   "source": [
+    "modelx.predict(x_holdout)"
    ]
   },
   {
