--- a/doordash_delivery_est/doordash_est.ipynb
+++ b/doordash_delivery_est/doordash_est.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,9 +433,11 @@
     "                cv_ytrain,cv_ytest = y_train.iloc[train_index],y_train.iloc[test_index]\n",
     "                auto_ml.fit(X_train=cv_xtrain,y_train=cv_ytrain,time_budget=time_budget,metric=metric,estimator_list=estimator_list,task=task,seed=42,verbose=0)\n",
     "                ## store the model\n",
-    "                model_pickle = open(f'{file_path}/cv_{cv_subset}_automl_{model_name}.pkl','wb')\n",
-    "                pickle.dump(auto_ml,model_pickle,pickle.HIGHEST_PROTOCOL)\n",
-    "                model_pickle.close()\n",
+    "                with open(f'{file_path}/cv_{cv_subset}_automl_{model_name}.pkl','wb') as model_pickle:\n",
+    "                    pickle.dump(auto_ml,model_pickle,pickle.HIGHEST_PROTOCOL)\n",
+    "                #model_pickle = open(f'{file_path}/cv_{cv_subset}_automl_{model_name}.pkl','wb')\n",
+    "                #pickle.dump(auto_ml,model_pickle,pickle.HIGHEST_PROTOCOL)\n",
+    "                #model_pickle.close()\n",
     "                cv_subset += 1\n",
     "                ## predict, validate\n",
     "                cv_yhat = auto_ml.predict(cv_xtest)\n",
@@ -455,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -848,6 +850,66 @@
     "    estimator_list=['xgb_gamma','xgboost','xgb_limitdepth'],\n",
     "    task='regression',\n",
     "    cv_folds=5,\n",
+    "    file_path='singleModel_model_pickles',\n",
+    "    model_name='singleStepModel_predPrep.pkl'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "Can't pickle local object 'ApplyMethod_autoML_cv_ensemble.<locals>.xgbGamma'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)\n",
+      "Cell \u001b[1;32mIn [64], line 1\u001b[0m\n",
+      "\u001b[1;32m----> 1\u001b[0m auto_xgb_cv \u001b[39m=\u001b[39m ApplyMethod_autoML_cv_ensemble(\n",
+      "\u001b[0;32m      2\u001b[0m     x_train\u001b[39m=\u001b[39;49mx_train,\n",
+      "\u001b[0;32m      3\u001b[0m     x_test\u001b[39m=\u001b[39;49mx_holdout,\n",
+      "\u001b[0;32m      4\u001b[0m     y_train\u001b[39m=\u001b[39;49my_train,\n",
+      "\u001b[0;32m      5\u001b[0m     y_test\u001b[39m=\u001b[39;49my_holdout,\n",
+      "\u001b[0;32m      6\u001b[0m     time_budget\u001b[39m=\u001b[39;49m\u001b[39m400\u001b[39;49m,\n",
+      "\u001b[0;32m      7\u001b[0m     metric\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mmse\u001b[39;49m\u001b[39m'\u001b[39;49m,\n",
+      "\u001b[0;32m      8\u001b[0m     estimator_list\u001b[39m=\u001b[39;49m[\u001b[39m'\u001b[39;49m\u001b[39mxgb_gamma\u001b[39;49m\u001b[39m'\u001b[39;49m,\u001b[39m'\u001b[39;49m\u001b[39mxgboost\u001b[39;49m\u001b[39m'\u001b[39;49m,\u001b[39m'\u001b[39;49m\u001b[39mxgb_limitdepth\u001b[39;49m\u001b[39m'\u001b[39;49m],\n",
+      "\u001b[0;32m      9\u001b[0m     task\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mregression\u001b[39;49m\u001b[39m'\u001b[39;49m,\n",
+      "\u001b[0;32m     10\u001b[0m     cv_folds\u001b[39m=\u001b[39;49m\u001b[39m5\u001b[39;49m,\n",
+      "\u001b[0;32m     11\u001b[0m     file_path\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39msingleModel_model_pickles\u001b[39;49m\u001b[39m'\u001b[39;49m,\n",
+      "\u001b[0;32m     12\u001b[0m     model_name\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39msingleStepModel_predPrep.pkl\u001b[39;49m\u001b[39m'\u001b[39;49m\n",
+      "\u001b[0;32m     13\u001b[0m )\n",
+      "\n",
+      "Cell \u001b[1;32mIn [63], line 35\u001b[0m, in \u001b[0;36mApplyMethod_autoML_cv_ensemble\u001b[1;34m(x_train, x_test, y_train, y_test, time_budget, metric, estimator_list, task, cv_folds, file_path, model_name)\u001b[0m\n",
+      "\u001b[0;32m     33\u001b[0m                 cv_holdout_scores\u001b[39m.\u001b[39mappend(accuracy_score(y_true\u001b[39m=\u001b[39my_test,y_pred\u001b[39m=\u001b[39mcv_yhat))\n",
+      "\u001b[0;32m     34\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m \u001b[39mas\u001b[39;00m ex:\n",
+      "\u001b[1;32m---> 35\u001b[0m     \u001b[39mraise\u001b[39;00m ex\n",
+      "\u001b[0;32m     36\u001b[0m \u001b[39mreturn\u001b[39;00m cv_scores,cv_holdout_scores\n",
+      "\n",
+      "Cell \u001b[1;32mIn [63], line 20\u001b[0m, in \u001b[0;36mApplyMethod_autoML_cv_ensemble\u001b[1;34m(x_train, x_test, y_train, y_test, time_budget, metric, estimator_list, task, cv_folds, file_path, model_name)\u001b[0m\n",
+      "\u001b[0;32m     18\u001b[0m \u001b[39m## store the model\u001b[39;00m\n",
+      "\u001b[0;32m     19\u001b[0m model_pickle \u001b[39m=\u001b[39m \u001b[39mopen\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mfile_path\u001b[39m}\u001b[39;00m\u001b[39m/cv_\u001b[39m\u001b[39m{\u001b[39;00mcv_subset\u001b[39m}\u001b[39;00m\u001b[39m_automl_\u001b[39m\u001b[39m{\u001b[39;00mmodel_name\u001b[39m}\u001b[39;00m\u001b[39m.pkl\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mwb\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[1;32m---> 20\u001b[0m pickle\u001b[39m.\u001b[39;49mdump(auto_ml,model_pickle,pickle\u001b[39m.\u001b[39;49mHIGHEST_PROTOCOL)\n",
+      "\u001b[0;32m     21\u001b[0m model_pickle\u001b[39m.\u001b[39mclose()\n",
+      "\u001b[0;32m     22\u001b[0m cv_subset \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n",
+      "\n",
+      "\u001b[1;31mAttributeError\u001b[0m: Can't pickle local object 'ApplyMethod_autoML_cv_ensemble.<locals>.xgbGamma'"
+     ]
+    }
+   ],
+   "source": [
+    "auto_xgb_cv = ApplyMethod_autoML_cv_ensemble(\n",
+    "    x_train=x_train,\n",
+    "    x_test=x_holdout,\n",
+    "    y_train=y_train,\n",
+    "    y_test=y_holdout,\n",
+    "    time_budget=10,\n",
+    "    metric='mse',\n",
+    "    estimator_list=[,'xgboost',],\n",
+    "    task='regression',\n",
+    "    cv_folds=3,\n",
     "    file_path='singleModel_model_pickles',\n",
     "    model_name='singleStepModel_predPrep.pkl'\n",
     ")"
