Bug identified, created issue

--- a/doordash_delivery_est/doordash_est.ipynb
+++ b/doordash_delivery_est/doordash_est.ipynb
@@ -411,7 +411,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#TODO: #13 fix feature dropping by flaml when pickling flaml.model()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,17 +436,21 @@
     "    auto_ml.add_learner(learner_name=\"xgb_gamma\",learner_class=xgbGamma)\n",
     "    try:\n",
     "        ## cross-validation\n",
+    "        whyshape = []\n",
+    "        cv_models = []\n",
     "        cv_subset = 0\n",
     "        for train_index,test_index in kf.split(x_train):\n",
     "                cv_xtrain,cv_xtest = x_train.iloc[train_index],x_train.iloc[test_index]\n",
     "                cv_ytrain,cv_ytest = y_train.iloc[train_index],y_train.iloc[test_index]\n",
+    "                whyshape.append(cv_xtrain)\n",
     "                auto_ml.fit(X_train=cv_xtrain,y_train=cv_ytrain,time_budget=time_budget,metric=metric,estimator_list=estimator_list,task=task,seed=42,verbose=0)\n",
+    "                cv_models.append(auto_ml.model)\n",
     "                ## store the model\n",
-    "                with open(f'{file_path}/cv_{cv_subset}_automl_{model_name}.pkl','wb') as model_pickle:\n",
-    "                    pickle.dump(auto_ml,model_pickle,pickle.HIGHEST_PROTOCOL)\n",
-    "                #model_pickle = open(f'{file_path}/cv_{cv_subset}_automl_{model_name}.pkl','wb')\n",
-    "                #pickle.dump(auto_ml,model_pickle,pickle.HIGHEST_PROTOCOL)\n",
-    "                #model_pickle.close()\n",
+    "                #with open(f'{file_path}/cv_{cv_subset}_automl_{model_name}.pkl','wb') as model_pickle:\n",
+    "                    #pickle.dump(auto_ml,model_pickle,pickle.HIGHEST_PROTOCOL)\n",
+    "                model_pickle = open(f'{file_path}/cv_{cv_subset}_automl_{model_name}.pkl','wb')\n",
+    "                pickle.dump(auto_ml.model,model_pickle,pickle.HIGHEST_PROTOCOL)\n",
+    "                model_pickle.close()\n",
     "                cv_subset += 1\n",
     "                ## predict, validate\n",
     "                cv_yhat = auto_ml.predict(cv_xtest)\n",
@@ -452,7 +465,7 @@
     "                    cv_holdout_scores.append(accuracy_score(y_true=y_test,y_pred=cv_yhat))\n",
     "    except Exception as ex:\n",
     "        raise ex\n",
-    "    return cv_scores,cv_holdout_scores"
+    "    return cv_scores,cv_holdout_scores,whyshape,cv_models"
    ]
   },
   {
@@ -859,60 +872,285 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "Can't pickle local object 'ApplyMethod_autoML_cv_ensemble.<locals>.xgbGamma'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)\n",
-      "Cell \u001b[1;32mIn [64], line 1\u001b[0m\n",
-      "\u001b[1;32m----> 1\u001b[0m auto_xgb_cv \u001b[39m=\u001b[39m ApplyMethod_autoML_cv_ensemble(\n",
-      "\u001b[0;32m      2\u001b[0m     x_train\u001b[39m=\u001b[39;49mx_train,\n",
-      "\u001b[0;32m      3\u001b[0m     x_test\u001b[39m=\u001b[39;49mx_holdout,\n",
-      "\u001b[0;32m      4\u001b[0m     y_train\u001b[39m=\u001b[39;49my_train,\n",
-      "\u001b[0;32m      5\u001b[0m     y_test\u001b[39m=\u001b[39;49my_holdout,\n",
-      "\u001b[0;32m      6\u001b[0m     time_budget\u001b[39m=\u001b[39;49m\u001b[39m400\u001b[39;49m,\n",
-      "\u001b[0;32m      7\u001b[0m     metric\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mmse\u001b[39;49m\u001b[39m'\u001b[39;49m,\n",
-      "\u001b[0;32m      8\u001b[0m     estimator_list\u001b[39m=\u001b[39;49m[\u001b[39m'\u001b[39;49m\u001b[39mxgb_gamma\u001b[39;49m\u001b[39m'\u001b[39;49m,\u001b[39m'\u001b[39;49m\u001b[39mxgboost\u001b[39;49m\u001b[39m'\u001b[39;49m,\u001b[39m'\u001b[39;49m\u001b[39mxgb_limitdepth\u001b[39;49m\u001b[39m'\u001b[39;49m],\n",
-      "\u001b[0;32m      9\u001b[0m     task\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mregression\u001b[39;49m\u001b[39m'\u001b[39;49m,\n",
-      "\u001b[0;32m     10\u001b[0m     cv_folds\u001b[39m=\u001b[39;49m\u001b[39m5\u001b[39;49m,\n",
-      "\u001b[0;32m     11\u001b[0m     file_path\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39msingleModel_model_pickles\u001b[39;49m\u001b[39m'\u001b[39;49m,\n",
-      "\u001b[0;32m     12\u001b[0m     model_name\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39msingleStepModel_predPrep.pkl\u001b[39;49m\u001b[39m'\u001b[39;49m\n",
-      "\u001b[0;32m     13\u001b[0m )\n",
-      "\n",
-      "Cell \u001b[1;32mIn [63], line 35\u001b[0m, in \u001b[0;36mApplyMethod_autoML_cv_ensemble\u001b[1;34m(x_train, x_test, y_train, y_test, time_budget, metric, estimator_list, task, cv_folds, file_path, model_name)\u001b[0m\n",
-      "\u001b[0;32m     33\u001b[0m                 cv_holdout_scores\u001b[39m.\u001b[39mappend(accuracy_score(y_true\u001b[39m=\u001b[39my_test,y_pred\u001b[39m=\u001b[39mcv_yhat))\n",
-      "\u001b[0;32m     34\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m \u001b[39mas\u001b[39;00m ex:\n",
-      "\u001b[1;32m---> 35\u001b[0m     \u001b[39mraise\u001b[39;00m ex\n",
-      "\u001b[0;32m     36\u001b[0m \u001b[39mreturn\u001b[39;00m cv_scores,cv_holdout_scores\n",
-      "\n",
-      "Cell \u001b[1;32mIn [63], line 20\u001b[0m, in \u001b[0;36mApplyMethod_autoML_cv_ensemble\u001b[1;34m(x_train, x_test, y_train, y_test, time_budget, metric, estimator_list, task, cv_folds, file_path, model_name)\u001b[0m\n",
-      "\u001b[0;32m     18\u001b[0m \u001b[39m## store the model\u001b[39;00m\n",
-      "\u001b[0;32m     19\u001b[0m model_pickle \u001b[39m=\u001b[39m \u001b[39mopen\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mfile_path\u001b[39m}\u001b[39;00m\u001b[39m/cv_\u001b[39m\u001b[39m{\u001b[39;00mcv_subset\u001b[39m}\u001b[39;00m\u001b[39m_automl_\u001b[39m\u001b[39m{\u001b[39;00mmodel_name\u001b[39m}\u001b[39;00m\u001b[39m.pkl\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mwb\u001b[39m\u001b[39m'\u001b[39m)\n",
-      "\u001b[1;32m---> 20\u001b[0m pickle\u001b[39m.\u001b[39;49mdump(auto_ml,model_pickle,pickle\u001b[39m.\u001b[39;49mHIGHEST_PROTOCOL)\n",
-      "\u001b[0;32m     21\u001b[0m model_pickle\u001b[39m.\u001b[39mclose()\n",
-      "\u001b[0;32m     22\u001b[0m cv_subset \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n",
-      "\n",
-      "\u001b[1;31mAttributeError\u001b[0m: Can't pickle local object 'ApplyMethod_autoML_cv_ensemble.<locals>.xgbGamma'"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "def "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "auto_xgb_cv = ApplyMethod_autoML_cv_ensemble(\n",
     "    x_train=x_train,\n",
     "    x_test=x_holdout,\n",
     "    y_train=y_train,\n",
     "    y_test=y_holdout,\n",
-    "    time_budget=10,\n",
+    "    time_budget=30,\n",
     "    metric='mse',\n",
-    "    estimator_list=[,'xgboost',],\n",
+    "    estimator_list=['xgboost',],\n",
     "    task='regression',\n",
     "    cv_folds=3,\n",
     "    file_path='singleModel_model_pickles',\n",
     "    model_name='singleStepModel_predPrep.pkl'\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list_two = auto_xgb_cv[2][1].columns.to_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "166"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(list_two)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>clean_store_primary_category__belgian</th>\n",
+       "      <th>created_hour_of_day__8</th>\n",
+       "      <th>clean_store_primary_category__indonesian</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>139725</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>139417</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100098</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8214</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55973</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>54886</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>110268</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>131932</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>146867</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>121958</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>89927 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        clean_store_primary_category__belgian  created_hour_of_day__8  \\\n",
+       "139725                                    0.0                     0.0   \n",
+       "139417                                    0.0                     0.0   \n",
+       "100098                                    0.0                     0.0   \n",
+       "8214                                      0.0                     0.0   \n",
+       "55973                                     0.0                     0.0   \n",
+       "...                                       ...                     ...   \n",
+       "54886                                     0.0                     0.0   \n",
+       "110268                                    0.0                     0.0   \n",
+       "131932                                    0.0                     0.0   \n",
+       "146867                                    0.0                     0.0   \n",
+       "121958                                    0.0                     0.0   \n",
+       "\n",
+       "        clean_store_primary_category__indonesian  \n",
+       "139725                                       0.0  \n",
+       "139417                                       0.0  \n",
+       "100098                                       0.0  \n",
+       "8214                                         0.0  \n",
+       "55973                                        0.0  \n",
+       "...                                          ...  \n",
+       "54886                                        0.0  \n",
+       "110268                                       0.0  \n",
+       "131932                                       0.0  \n",
+       "146867                                       0.0  \n",
+       "121958                                       0.0  \n",
+       "\n",
+       "[89927 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "auto_xgb_cv[2][1][['clean_store_primary_category__belgian','created_hour_of_day__8','clean_store_primary_category__indonesian']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aga = auto_xgb_cv[3][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list_one = aga.feature_names_in_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "163"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(list_one)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['clean_store_primary_category__belgian', 'created_hour_of_day__8', 'clean_store_primary_category__indonesian']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(list(set(list_two) - set(list_one)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = pickle.load(open('singleModel_model_pickles/cv_0_automl_singleStepModel_predPrep.pkl.pkl','rb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "163"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(model.feature_names_in_)"
    ]
   },
   {
